<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaleMeThis</string>
    <string name="action_settings">Settings</string>
    <string name="wishlist_title">My WishList</string>
    <string name="init_product_name">Product Name</string>
    <string name="init_product_merchant">Product Merchant</string>
    <string name="init_product_description">Product Description</string>
    <string name="init_current_price">Current Price</string>
    <string name="init_saving_total">Saving Total (%)</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="btn_wishlist_rmv">Remove From WishList</string>

</resources>