<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_item_full"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/smt_icon" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_product_name" />

    <TextView
        android:id="@+id/item_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_product_merchant" />

    <ImageView
        android:id="@+id/item_star_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star5" />

    <TextView
        android:id="@+id/item_current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_current_price"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Wishlist_Item_Current_Price" />

    <TextView
        android:id="@+id/item_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_saving_total"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Wishlist_Item_Saving" />

    <Button
        android:id="@+id/btn_buy_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buy_now" />

    <Button
        android:id="@+id/btn_remove_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_wishlist_rmv" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_product_description" />

</LinearLayout>